# Config values format
#
# List: [val1, val2 ...]
# Int: int_value
# Int as string: "Int"
# List as string: "[val1, val2 ...]"
# String: string_value
# None: None, none
# Boolean: true, True, False, false

[general]
short_name = Grimoire
update = false
# in seconds
sleep = 0
min_update_delay = 10
debug = true
# /var/log/mordred/
logs_dir = /home/bitergia/logs
kibana = "5"

[projects]
projects_file = /home/bitergia/conf/projects.json

[es_collection]
url = http://bitergia:bitergia@172.17.0.1:9200

[es_enrichment]
url = http://bitergia:bitergia@172.17.0.1:9200
user =
password =
autorefresh = false
studies = true

[sortinghat]
host = mariadb
user = root
password =
database = grimoire_sh
orgs_file = /home/bitergia/conf/orgs_file
load_orgs = false
affiliate = false
# see: sortinghat unify --help
unify_method =
# commonly: Unknown
unaffiliated_group = Unknown
autoprofile = [customer,git,github]
matching = [email]
sleep_for = 120
# sleep_for = 1800
bots_names = [Beloved Bot]

[panels]
kibiter_time_from= "now-30y"
kibiter_default_index= "git"

[phases]
collection = true
identities = false
enrichment = false
panels = false

[apache]
collect = false
enrich = false
raw_index = test_apache-raw
enriched_index = test_apache

[askbot]
raw_index = test_askbot-raw
enriched_index = text_askbot
fetch-archive = true
archive-path = ./archives/askbot.archive

[bugzilla]
raw_index = test_bugzilla-raw
enriched_index = test_bugzilla
max-bugs = 5
max-bugs-csv = 500
fetch-archive = true
archive-path = ./archives/bugzilla.archive

[bugzillarest]
raw_index = test_bugzillarest-raw
enriched_index = test_bugzillarest
max-bugs = 2
fetch-archive = true
archive-path = ./archives/bugzillarest.archive

[confluence]
raw_index = test_confluence-raw
enriched_index = test_confluence
fetch-archive = true
archive-path = ./archives/confluence.archive

[crates]
# Perceval archive not supported
collect = false
raw_index = crates_test-raw
enriched_index = crates_test

[discourse]
raw_index = test_discourse-raw
enriched_index = test_discourse
fetch-archive = true
archive-path = ./archives/discourse.archive

[dockerhub]
raw_index = test_dockerhub-raw
enriched_index = test_dockerhub
fetch-archive = true
archive-path = ./archives/dockerhub.archive

[functest]
collect=False
raw_index = test_functest-raw
enriched_index = test_functest

[gerrit]
raw_index = test_gerrit-raw
enriched_index = test_gerrit
fetch-archive = true
user = valeriocos
archive-path = ./archives/gerrit.archive

[git]
raw_index = test_git-raw
enriched_index = test_git

[github]
raw_index = test_github-raw
enriched_index = test_github
sleep-for-rate = true
fetch-archive = true
api-token = aaa
archive-path = ./archives/github.archive

[google_hits]
# logstash
collect = false
enrich = false
raw_index = test_google_hits-raw
enriched_index = test_google_hits

[hyperkitty]
raw_index = test_hyperkitty-raw
enriched_index = test_hyperkitty
from-date = 2017-01-01

[jenkins]
raw_index = test_jenkins-raw
enriched_index = test_jenkins
fetch-archive = true
archive-path = ./archives/jenkins.archive

[jira]
raw_index = test_jira-raw
enriched_index = test_jira
fetch-archive = true
archive-path = ./archives/jira.archive

[mbox]
raw_index = test_mbox-raw
enriched_index = test_mbox

[mediawiki]
raw_index = test_mediawiki-raw
enriched_index = test_mediawiki
fetch-archive = true
archive-path = ./archives/mediawiki-1.28.archive

[meetup]
raw_index = test_meetup-raw
enriched_index =  test_meetup
fetch-archive = true
api-token = aaaa
max-items = 2
archive-path = ./archives/meetup.archive

[mozillaclub]
raw_index = test_mozillaclub-raw
enriched_index = test_mozillaclub
fetch-archive = true
archive-path = ./archives/mozillaclub.archive

[nntp]
raw_index = test_nntp-raw
enriched_index =  test_nntp
fetch-archive = true
archive-path = ./archives/nntp.archive

[phabricator]
raw_index = test_phabricator-raw
enriched_index = test_phabricator
api-token = AAAA
fetch-archive = true
archive-path = ./archives/phabricator.archive

[pipermail]
raw_index = test_pipermail-raw
enriched_index = test_pipermail_test

[redmine]
raw_index = test_redmine-raw
enriched_index = test_redmine
fetch-archive = true
api-token = AAAA
max-issues = 3
archive-path = ./archives/redmine.archive

[remo]
raw_index = test_remo-raw
enriched_index = test_remo
fetch-archive = true
archive-path = ./archives/remo.archive

[remo:activities]
# Perceval cache already used in [remo]
# TODO: Archive probably can handle this use case
collect = false
raw_index = remo_activities_test-raw
enriched_index = remo_activities_test

[rss]
raw_index = test_rss-raw
enriched_index = test_rss
fetch-archive = true
archive-path = ./archives/rss.archive

[stackexchange]
raw_index = test_stackexchange-raw
enriched_index = test_stackexchange
api-token = aaa
max-questions = 1
fetch-archive = true
archive-path = ./archives/stackexchange.archive

[slack]
raw_index = test_slack-raw
enriched_index = test_slack
api-token = aaaa
max-items = 5
fetch-archive = true
archive-path = ./archives/slack.archive

[supybot]
raw_index = test_supybot-raw
enriched_index = test_supybot
from-date = 2000-12-09

[telegram]
raw_index = test_telegram-raw
enriched_index = test_telegram
api-token = 12345678
fetch-archive = true
archive-path = ./archives/telegram.archive

[twitter]
# logstash
collect = false
raw_index = test_twitter-raw
enriched_index = test_twitter

